[package]
name = "osr-parser"
version = "0.7.0"
edition = "2021"
description = "Library for parsing osu! osr files!"
license = "MIT"

repository = "https://github.com/sibyl666/osr-parser"
homepage = "https://github.com/sibyl666/osr-parser"

exclude = [
  "replay.osr",
  "./tests/*"
]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
